# hijack

./: pyproject.toml
hijack/: hijack.py
hijack/_cli/: hijack_cli.py
