[tool.poetry]
name = "hijack"
version = "0.1.0"
description = ""
authors = ["Potochi <budliviu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"

[tool.poetry.scripts]
hijack = "hijack._cli.hijack_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
